#Language-HOOK-commit741 add key Visa = Visa

--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -1050,3 +1050,4 @@ VID=Ng\u00E2n h\u00E0ng Li\u00EAn doanh VID Public
 VPB=Ng\u00E2n h\u00E0ng TMCP Vi\u1EC7t Nam th\u1ECBnh v\u01B0\u1EE3ng
 VietcomBank=Ng\u00E2n h\u00E0ng TMCP Ngo\u1EA1i th\u01B0\u01A1ng Vi\u1EC7t \
 VietinBank=Ng\u00E2n h\u00E0ng TMCP C\u00F4ng th\u01B0\u01A1ng Vi\u1EC7t Nam
+Visa=Visa
