#Language-HOOK-commit871 add key approve-note = N\u1ED9i dung x\u00E1c nh\u1EADn

--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -1056,3 +1056,4 @@ action=H\u00E0nh \u0111\u1ED9ng
 all-status=----L\u1ECDc theo tr\u1EA1ng th\u00E1i phi\u1EBFu thanh \
 amount=S\u1ED1 ti\u1EC1n (VN\u0110)
 approve-datetime=Ng\u00E0y gi\u1EDD \u0111\u01B0\u1EE3c x\u00E1c nh\u1EADn
+approve-note=N\u1ED9i dung x\u00E1c nh\u1EADn
