--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -1059,3 +1059,4 @@ approve-datetime=Ng\u00E0y gi\u1EDD \u0111\u01B0\u1EE3c x\u00E1c nh\u1EADn
 approve-note=N\u1ED9i dung x\u00E1c nh\u1EADn
 approved=Ho\u00E0n th\u00E0nh
 bank=Chuy\u1EC3n kho\u1EA3n
+bank-code=M\u00E3 ng\u00E2n h\u00E0ng
