--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -1061,3 +1061,4 @@ approved=Ho\u00E0n th\u00E0nh
 bank=Chuy\u1EC3n kho\u1EA3n
 bank-code=M\u00E3 ng\u00E2n h\u00E0ng
 bank-info=T\u00E0i kho\u1EA3n ng\u00E2n h\u00E0ng
+bank-transaction=Chuy\u1EC3n kho\u1EA3n
