#Language-HOOK-commit991 add key cap-nhat-yeu-cau-moi-nhat = C\u1EADp nh\u1EADt y\u00EAu c\u1EA7u m\u1EDBi \

--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -1062,3 +1062,4 @@ bank=Chuy\u1EC3n kho\u1EA3n
 bank-code=M\u00E3 ng\u00E2n h\u00E0ng
 bank-info=T\u00E0i kho\u1EA3n ng\u00E2n h\u00E0ng
 bank-transaction=Chuy\u1EC3n kho\u1EA3n
+cap-nhat-yeu-cau-moi-nhat=C\u1EADp nh\u1EADt y\u00EAu c\u1EA7u m\u1EDBi \
