--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -1063,3 +1063,4 @@ bank-code=M\u00E3 ng\u00E2n h\u00E0ng
 bank-info=T\u00E0i kho\u1EA3n ng\u00E2n h\u00E0ng
 bank-transaction=Chuy\u1EC3n kho\u1EA3n
 cap-nhat-yeu-cau-moi-nhat=C\u1EADp nh\u1EADt y\u00EAu c\u1EA7u m\u1EDBi \
+cash=Ti\u1EC1n m\u1EB7t
