--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -1064,3 +1064,4 @@ bank-info=T\u00E0i kho\u1EA3n ng\u00E2n h\u00E0ng
 bank-transaction=Chuy\u1EC3n kho\u1EA3n
 cap-nhat-yeu-cau-moi-nhat=C\u1EADp nh\u1EADt y\u00EAu c\u1EA7u m\u1EDBi \
 cash=Ti\u1EC1n m\u1EB7t
+chung-tu-thanh-toan=Ch\u1EE9ng t\u1EEB thanh to\u00E1n cho chuy\u1EC3n \
