--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -1066,3 +1066,4 @@ cap-nhat-yeu-cau-moi-nhat=C\u1EADp nh\u1EADt y\u00EAu c\u1EA7u m\u1EDBi \
 cash=Ti\u1EC1n m\u1EB7t
 chung-tu-thanh-toan=Ch\u1EE9ng t\u1EEB thanh to\u00E1n cho chuy\u1EC3n \
 chung-tu-thanh-toan-cho-chuyen-khoan-la-giay-yeu-cau-nop-tien-vao-ngan-hang=\
+co-label=c\u00F3
