#Language-HOOK-commit1271 add key confirm-datetime = Ng\u00E0y b\u00E1o n\u1ED9p

--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -1067,3 +1067,4 @@ cash=Ti\u1EC1n m\u1EB7t
 chung-tu-thanh-toan=Ch\u1EE9ng t\u1EEB thanh to\u00E1n cho chuy\u1EC3n \
 chung-tu-thanh-toan-cho-chuyen-khoan-la-giay-yeu-cau-nop-tien-vao-ngan-hang=\
 co-label=c\u00F3
+confirm-datetime=Ng\u00E0y b\u00E1o n\u1ED9p
