--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -1068,3 +1068,4 @@ chung-tu-thanh-toan=Ch\u1EE9ng t\u1EEB thanh to\u00E1n cho chuy\u1EC3n \
 chung-tu-thanh-toan-cho-chuyen-khoan-la-giay-yeu-cau-nop-tien-vao-ngan-hang=\
 co-label=c\u00F3
 confirm-datetime=Ng\u00E0y b\u00E1o n\u1ED9p
+confirm-file-entry-id=Ch\u1EE9ng t\u1EEB n\u1ED9p k\u00E8m theo
