#Language-HOOK-commit1311 add key confirm-file-name = T\u00EAn t\u1EC7p ch\u1EE9ng t\u1EEB

--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -1069,3 +1069,4 @@ chung-tu-thanh-toan-cho-chuyen-khoan-la-giay-yeu-cau-nop-tien-vao-ngan-hang=\
 co-label=c\u00F3
 confirm-datetime=Ng\u00E0y b\u00E1o n\u1ED9p
 confirm-file-entry-id=Ch\u1EE9ng t\u1EEB n\u1ED9p k\u00E8m theo
+confirm-file-name=T\u00EAn t\u1EC7p ch\u1EE9ng t\u1EEB
