--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -1077,3 +1077,4 @@ good-code-not-valid=M\u00E3 \u0111\u01A1n h\u00E0ng kh\u00F4ng h\u1EE3p \
 ## duplicate key - line -1076 gov-agency-name=C\u01A1 quan
 hoac-hoa-don-chung-nhan-giao-dich-chuyen-khoan-duoc-in-ra=ho\u1EB7c h\u00F3a \
 ## duplicate key - line -1078 javax.portlet.description=Danh s\u00E1ch y\u00EAu c\u1EA7u thanh to\u00E1n
+## duplicate key - line -1079 javax.portlet.short-title=Danh s\u00E1ch y\u00EAu c\u1EA7u thanh to\u00E1n
