--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -1079,3 +1079,4 @@ hoac-hoa-don-chung-nhan-giao-dich-chuyen-khoan-duoc-in-ra=ho\u1EB7c h\u00F3a \
 ## duplicate key - line -1078 javax.portlet.description=Danh s\u00E1ch y\u00EAu c\u1EA7u thanh to\u00E1n
 ## duplicate key - line -1079 javax.portlet.short-title=Danh s\u00E1ch y\u00EAu c\u1EA7u thanh to\u00E1n
 ## duplicate key - line -1080 javax.portlet.title=Danh s\u00E1ch y\u00EAu c\u1EA7u thanh to\u00E1n
+keypay=Tr\u1EF1c tuy\u1EBFn
