#Language-HOOK-commit1641 add key merchant-code = M\u00E3 \u0111\u1EA1i l\u00ED

--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -1082,3 +1082,4 @@ hoac-hoa-don-chung-nhan-giao-dich-chuyen-khoan-duoc-in-ra=ho\u1EB7c h\u00F3a \
 keypay=Tr\u1EF1c tuy\u1EBFn
 keypay-success=Giao d\u1ECBch thanh to\u00E1n \u0111\u00E3 th\u00E0nh \
 keypay-transaction=Tr\u1EF1c tuy\u1EBFn
+merchant-code=M\u00E3 \u0111\u1EA1i l\u00ED
