--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -1083,3 +1083,4 @@ keypay=Tr\u1EF1c tuy\u1EBFn
 keypay-success=Giao d\u1ECBch thanh to\u00E1n \u0111\u00E3 th\u00E0nh \
 keypay-transaction=Tr\u1EF1c tuy\u1EBFn
 merchant-code=M\u00E3 \u0111\u1EA1i l\u00ED
+ngay-yeu-cau=Ng\u00E0y y\u00EAu c\u1EA7u
