--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -1088,3 +1088,4 @@ ngay-yeu-cau=Ng\u00E0y y\u00EAu c\u1EA7u
 no-payment-file-were-found=Kh\u00F4ng t\u00ECm th\u1EA5y y\u00EAu c\u1EA7u \
 payment-list=Danh s\u00E1ch c\u00E1c y\u00EAu c\u1EA7u thu ph\u00ED
 payment-method=H\u00ECnh th\u1EE9c thanh to\u00E1n
+payment-name=T\u00EAn ph\u00ED, l\u1EC7 ph\u00ED
