--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -1092,3 +1092,4 @@ payment-name=T\u00EAn ph\u00ED, l\u1EC7 ph\u00ED
 payment-options=Ph\u01B0\u01A1ng th\u1EE9c l\u1EF1a ch\u1ECDn
 payment-request=TH\u00D4NG B\u00C1O PH\u00CD, L\u1EC6 PH\u00CD
 payment-status=Tr\u1EA1ng th\u00E1i
+payment-status-detail=T\u00ECnh tr\u1EA1ng thanh to\u00E1n
