--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -1094,3 +1094,4 @@ payment-request=TH\u00D4NG B\u00C1O PH\u00CD, L\u1EC6 PH\u00CD
 payment-status=Tr\u1EA1ng th\u00E1i
 payment-status-detail=T\u00ECnh tr\u1EA1ng thanh to\u00E1n
 payment.file.confirm.bank.success=B\u00E1o n\u1ED9p chuy\u1EC3n kho\u1EA3n \
+place-info=\u0110\u1ECBa ch\u1EC9 thanh to\u00E1n
