#Language-HOOK-commit2041 add key request-bank-payment = B\u00E1o n\u1ED9p

--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -1099,3 +1099,4 @@ place-info=\u0110\u1ECBa ch\u1EC9 thanh to\u00E1n
 rejected=Kh\u00F4ng h\u1EE3p l\u1EC7
 request-bank=B\u00E1o n\u1ED9p chuy\u1EC3n kho\u1EA3n
 request-bank-hint=Ch\u1EE9ng t\u1EEB thanh to\u00E1n cho chuy\u1EC3n \
+request-bank-payment=B\u00E1o n\u1ED9p
