#Language-HOOK-commit2101 add key requested = Ch\u1EDD n\u1ED9p

--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -1102,3 +1102,4 @@ request-bank-hint=Ch\u1EE9ng t\u1EEB thanh to\u00E1n cho chuy\u1EC3n \
 request-bank-payment=B\u00E1o n\u1ED9p
 request-datetime=Ng\u00E0y y\u00EAu c\u1EA7u
 request-note=Y\u00EAu c\u1EA7u k\u00E8m theo
+requested=Ch\u1EDD n\u1ED9p
