#Language-HOOK-commit11 add key javax.portlet.short-title = Cấu hình tham số hỗ trợ thanh toán

--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -1117,3 +1117,4 @@ danh-sach-yeu-cau-thu-phi=Danh s\u00E1ch y\u00EAu c\u1EA7u
 
 
 ## duplicate key - line -1113 javax.portlet.description=Cấu hình tham số hỗ trợ thanh toán
+## duplicate key - line -1119 javax.portlet.short-title=Cấu hình tham số hỗ trợ thanh toán
