#Language-HOOK-commit2271 add key danh-sach-yeu-cau-thu-phi=Danh s\u00E1ch y\u00EAu c\u1EA7u

--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -1110,3 +1110,4 @@ trans_id=M\u00E3 giao d\u1ECBch tr\u1EF1c tuy\u1EBFn
 view-confirm-file-entry=Xem t\u1EC7p ch\u1EE9ng t\u1EEB
 xem-detail=( Xem chi ti\u1EBFt )
 yeu-cau-thanh-toan-moi-nhat=y\u00EAu c\u1EA7u thanh to\u00E1n m\u1EDBi \
+danh-sach-yeu-cau-thu-phi=Danh s\u00E1ch y\u00EAu c\u1EA7u
