--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -1122,3 +1122,4 @@ danh-sach-yeu-cau-thu-phi=Danh s\u00E1ch y\u00EAu c\u1EA7u
 gov-agency-organization-id=Cơ quan thực hiện
 ## duplicate key - line -1122 bank-info=Tài khoản ngân hàng
 ## duplicate key - line -1123 place-info=Địa điểm thanh toán tiền mặt
+keypay-domain=Địa chỉ miền
