--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -1123,3 +1123,4 @@ gov-agency-organization-id=Cơ quan thực hiện
 ## duplicate key - line -1122 bank-info=Tài khoản ngân hàng
 ## duplicate key - line -1123 place-info=Địa điểm thanh toán tiền mặt
 keypay-domain=Địa chỉ miền
+keypay-version=Phiên bản
