#Language-HOOK-commit101 add key keypay-secure-key=Mã bảo mật

--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -1125,3 +1125,4 @@ gov-agency-organization-id=Cơ quan thực hiện
 keypay-domain=Địa chỉ miền
 keypay-version=Phiên bản
 keypay-merchant-code=Mã đại lý
+keypay-secure-key=Mã bảo mật
