--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -1127,3 +1127,4 @@ keypay-version=Phiên bản
 keypay-merchant-code=Mã đại lý
 keypay-secure-key=Mã bảo mật
 gov-agency-tax-no=Mã số thuế
+invoice-template-no=Mẫu số
