#Language-HOOK-commit111 add key gov-agency-tax-no=Mã số thuế

--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -1126,3 +1126,4 @@ keypay-domain=Địa chỉ miền
 keypay-version=Phiên bản
 keypay-merchant-code=Mã đại lý
 keypay-secure-key=Mã bảo mật
+gov-agency-tax-no=Mã số thuế
