#Language-HOOK-commit131 add key invoice-issue-no=Kí hiệu

--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -1128,3 +1128,4 @@ keypay-merchant-code=Mã đại lý
 keypay-secure-key=Mã bảo mật
 gov-agency-tax-no=Mã số thuế
 invoice-template-no=Mẫu số
+invoice-issue-no=Kí hiệu
