--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -1130,3 +1130,4 @@ gov-agency-tax-no=Mã số thuế
 invoice-template-no=Mẫu số
 invoice-issue-no=Kí hiệu
 invoice-last-no=Số thứ tự
+keypay-configuration=Cấu hình thanh toán trực tuyến keypay
