#Language-HOOK-commit141 add key invoice-last-no=Số thứ tự

--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -1129,3 +1129,4 @@ keypay-secure-key=Mã bảo mật
 gov-agency-tax-no=Mã số thuế
 invoice-template-no=Mẫu số
 invoice-issue-no=Kí hiệu
+invoice-last-no=Số thứ tự
