--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -1133,3 +1133,4 @@ invoice-last-no=Số thứ tự
 keypay-configuration=Cấu hình thanh toán trực tuyến keypay
 invoice-configuration=Cấu hình thông tin hóa đơn
 no-more-than-7-characters=Số hóa đơn phải nhỏ hơn 7 ký tự
+do-not-have-permission=Bạn không đủ quyền truy cập nội dung này
