--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -1132,3 +1132,4 @@ invoice-issue-no=Kí hiệu
 invoice-last-no=Số thứ tự
 keypay-configuration=Cấu hình thanh toán trực tuyến keypay
 invoice-configuration=Cấu hình thông tin hóa đơn
+no-more-than-7-characters=Số hóa đơn phải nhỏ hơn 7 ký tự
