#Language-HOOK-commit161 add key invoice-configuration=Cấu hình thông tin hóa đơn

--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -1131,3 +1131,4 @@ invoice-template-no=Mẫu số
 invoice-issue-no=Kí hiệu
 invoice-last-no=Số thứ tự
 keypay-configuration=Cấu hình thanh toán trực tuyến keypay
+invoice-configuration=Cấu hình thông tin hóa đơn
