#Language-HOOK-commit221 add key update-payment-config-error=Không thể cập nhật thông tin cấu hình thanh toán

--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -1137,3 +1137,4 @@ do-not-have-permission=Bạn không đủ quyền truy cập nội dung này
 action.MANAGE_PAYMENT_CONFIG=Cấu hình thu phí
 report-template=Mẫu in biên lai
 update-payment-config-success=Cập nhật thông tin cấu hình thanh toán thành công
+update-payment-config-error=Không thể cập nhật thông tin cấu hình thanh toán
