--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -1139,3 +1139,4 @@ report-template=Mẫu in biên lai
 update-payment-config-success=Cập nhật thông tin cấu hình thanh toán thành công
 update-payment-config-error=Không thể cập nhật thông tin cấu hình thanh toán
 view-report-template=Xem trước mẫu báo cáo
+preview-report-template=Xem trước mẫu báo cáo
