--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -1140,3 +1140,8 @@ update-payment-config-success=Cập nhật thông tin cấu hình thanh toán th
 update-payment-config-error=Không thể cập nhật thông tin cấu hình thanh toán
 view-report-template=Xem trước mẫu báo cáo
 preview-report-template=Xem trước mẫu báo cáo
+##
+## Language 22
+##
+
+
