--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -1147,3 +1147,4 @@ preview-report-template=Xem trước mẫu báo cáo
 
 No=STT
 ## duplicate key - line -1148 amount=S\u1ED1 ti\u1EC1n (VN\u0110)
+## duplicate key - line -1149 approved=Ho\u00E0n th\u00E0nh
