--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -1149,3 +1149,4 @@ No=STT
 ## duplicate key - line -1148 amount=S\u1ED1 ti\u1EC1n (VN\u0110)
 ## duplicate key - line -1149 approved=Ho\u00E0n th\u00E0nh
 ban-da-thu-thu-so-tien-cua-nguoi-lam-thu-tuc=\u0110\u00E3 thu ti\u1EC1n \
+## duplicate key - line -1151 cash=Ti\u1EC1n m\u1EB7t
