--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -1150,3 +1150,4 @@ No=STT
 ## duplicate key - line -1149 approved=Ho\u00E0n th\u00E0nh
 ban-da-thu-thu-so-tien-cua-nguoi-lam-thu-tuc=\u0110\u00E3 thu ti\u1EC1n \
 ## duplicate key - line -1151 cash=Ti\u1EC1n m\u1EB7t
+cho-nop=Ch\u1EDD n\u1ED9p
