#Language-HOOK-commit201 add key co-quan-thuc-hien = C\u01A1 quan th\u1EF1c hi\u1EC7n

--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -1153,3 +1153,4 @@ ban-da-thu-thu-so-tien-cua-nguoi-lam-thu-tuc=\u0110\u00E3 thu ti\u1EC1n \
 cho-nop=Ch\u1EDD n\u1ED9p
 chung-tu-kem-theo=Ch\u1EE9ng t\u1EEB k\u00E8m theo
 chuyen-khoan=Chuy\u1EC3n kho\u1EA3n
+co-quan-thuc-hien=C\u01A1 quan th\u1EF1c hi\u1EC7n
