#Language-HOOK-commit221 add key confirm-payment-cash-error = Qu\u00E1 tr\u00ECnh x\u00E1c nh\u1EADn thu \

--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -1154,3 +1154,4 @@ cho-nop=Ch\u1EDD n\u1ED9p
 chung-tu-kem-theo=Ch\u1EE9ng t\u1EEB k\u00E8m theo
 chuyen-khoan=Chuy\u1EC3n kho\u1EA3n
 co-quan-thuc-hien=C\u01A1 quan th\u1EF1c hi\u1EC7n
+confirm-payment-cash-error=Qu\u00E1 tr\u00ECnh x\u00E1c nh\u1EADn thu \
