--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -1160,3 +1160,4 @@ confirm-payment-cash-success=\u0110\u00E3 x\u00E1c nh\u1EADn thu ti\u1EC1n \
 da-bao-nop=\u0110\u00E3 b\u00E1o n\u1ED9p
 danh-sach-ho-so-thu-phi=Danh s\u00E1ch h\u1ED3 s\u01A1 thu ph\u00ED
 dong-y=\u0110\u1ED3ng \u00FD
+ghi-chu-kem-theo=Ghi ch\u00FA k\u00E8m theo
