#Language-HOOK-commit391 add key hien-thi-ho-so-tu = Hi\u1EC3n th\u1ECB h\u1ED3 s\u01A1 t\u1EEB

--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -1161,3 +1161,4 @@ da-bao-nop=\u0110\u00E3 b\u00E1o n\u1ED9p
 danh-sach-ho-so-thu-phi=Danh s\u00E1ch h\u1ED3 s\u01A1 thu ph\u00ED
 dong-y=\u0110\u1ED3ng \u00FD
 ghi-chu-kem-theo=Ghi ch\u00FA k\u00E8m theo
+hien-thi-ho-so-tu=Hi\u1EC3n th\u1ECB h\u1ED3 s\u01A1 t\u1EEB
