--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -1162,3 +1162,4 @@ danh-sach-ho-so-thu-phi=Danh s\u00E1ch h\u1ED3 s\u01A1 thu ph\u00ED
 dong-y=\u0110\u1ED3ng \u00FD
 ghi-chu-kem-theo=Ghi ch\u00FA k\u00E8m theo
 hien-thi-ho-so-tu=Hi\u1EC3n th\u1ECB h\u1ED3 s\u01A1 t\u1EEB
+hinh-thuc-thuc-hien=H\u00ECnh th\u1EE9c th\u1EF1c hi\u1EC7n
