--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -1165,3 +1165,4 @@ hien-thi-ho-so-tu=Hi\u1EC3n th\u1ECB h\u1ED3 s\u01A1 t\u1EEB
 hinh-thuc-thuc-hien=H\u00ECnh th\u1EE9c th\u1EF1c hi\u1EC7n
 ho-so=h\u1ED3 s\u01A1
 hoan-thanh=Ho\u00E0n th\u00E0nh
+hop-le=H\u1EE3p l\u1EC7
