#Language-HOOK-commit681 add key ngay-xac-nhan-thu-phi = Ng\u00E0y x\u00E1c nh\u1EADn thu ph\u00ED

--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -1175,3 +1175,4 @@ khong-hop-le=Kh\u00F4ng h\u1EE3p l\u1EC7
 khong-hop-le-yeu-cau-nhap-ro-ly-do=- Nh\u1EADp l\u00FD do kh\u00F4ng \
 loc-trang-thai-thanh-toan=L\u1ECDc theo tr\u1EA1ng th\u00E1i phi\u1EBFu \
 ngay-da-bao-nop=Ng\u00E0y b\u00E1o \u0111\u00E3 n\u1ED9p
+ngay-xac-nhan-thu-phi=Ng\u00E0y x\u00E1c nh\u1EADn thu ph\u00ED
