--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -1185,3 +1185,4 @@ noi-dung-xac-nhan=N\u1ED9i dung x\u00E1c nh\u1EADn
 on-processing=Ch\u1EDD n\u1ED9p
 payment-cash=Thu ph\u00ED ti\u1EC1n m\u1EB7t
 payment-confirm=X\u00E1c nh\u1EADn b\u00E1o n\u1ED9p
+payment-detail=Th\u00F4ng tin thanh to\u00E1n
