--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -1195,3 +1195,4 @@ payment.file.confirm.cash.error=X\u00E1c nh\u1EADn thanh to\u00E1n \
 payment.file.confirm.cash.success=X\u00E1c nh\u1EADn thanh to\u00E1n \
 ## duplicate key - line -1195 reception-no=M\u00E3 ti\u1EBFp nh\u1EADn
 ## duplicate key - line -1196 rejected=Kh\u00F4ng h\u1EE3p l\u1EC7
+## duplicate key - line -1197 requested=Ch\u1EDD n\u1ED9p
