#Language-HOOK-commit1261 add key tinh-trang-thanh-toan = T\u00ECnh tr\u1EA1ng thanh to\u00E1n

--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -1202,3 +1202,4 @@ so-tien=S\u1ED1 ti\u1EC1n
 ten-phi-thanh-toan=T\u00EAn ph\u00ED thanh to\u00E1n
 thu-phi=Thu ph\u00ED
 thu-tuc-hanh-chinh=Th\u1EE7 t\u1EE5c h\u00E0nh ch\u00EDnh
+tinh-trang-thanh-toan=T\u00ECnh tr\u1EA1ng thanh to\u00E1n
