--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -1220,3 +1220,4 @@ is-auto-load=T\u1EF1 c\u1EADp nh\u1EADt sau 1 ph\u00FAt
 ## duplicate key - line -1219 javax.portlet.description=Qu\u1EA3n l\u00FD theo d\u00F5i nh\u1EADt k\u00ED x\u1EED l\u00FD h\u1ED3 s\u01A1
 ## duplicate key - line -1220 javax.portlet.short-title=Qu\u1EA3n l\u00FD theo d\u00F5i nh\u1EADt k\u00ED x\u1EED l\u00FD h\u1ED3 s\u01A1
 ## duplicate key - line -1221 javax.portlet.title=Qu\u1EA3n l\u00FD theo d\u00F5i nh\u1EADt k\u00ED x\u1EED l\u00FD h\u1ED3 s\u01A1
+## duplicate key - line -1222 row-no=STT
