--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -1229,3 +1229,4 @@ to-date=\u0110\u1EBFn ng\u00E0y
 
 
 boss-of-dossier=Ch\u1EE7 h\u1ED3 s\u01A1
+date-for-receiving=Ng\u00E0y ti\u1EBFp nh\u1EADn
